test/files/errors/nested_unbound_variable.scm
; Test: Nested unbound variable - should return exit code 84
(+ 1 (* 2 undefined_var))
